--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="author" content="Packer Suxo-Sanchez">
     <meta name="description" content="Lawn Monster, LLC is a lawn care company headquartered in Lehi, Utah.">
     <meta name="keywords" content="Lawn Monster, lawn care, mowing, lawn mower, lawn mowing, Lehi, Utah">
+    <meta name="theme-color" content="#033C1C">
     <link rel="stylesheet" href="css/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com"> 
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> 
